objects/ASI_CRM_Outlet_Count_By_FY__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>ASI_CRM_Sub_Channel__r.ASI_CRM_CN_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <label>City</label>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>Outlets Count By FY</relationshipLabel>
        <relationshipName>Outlets_Count_By_FY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FY__c</fullName>
        <label>FY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
                <value>
                    <fullName>FY2021</fullName>
                </value>
                <value>
                    <fullName>FY2122</fullName>
                </value>
                <value>
                    <fullName>FY2223</fullName>
                </value>
                <value>
                    <fullName>FY2324</fullName>
                </value>
                <value>
                    <fullName>FY2425</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Nnumber_of_Outlet__c</fullName>
        <label># of Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Outlets Count By FY</relationshipLabel>
        <relationshipName>Outlets_Count_By_FY</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Outlet Count By FY</label>
    <nameField>
        <displayFormat>OC-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlets Count By FY</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Outlet_Count</fullName>
        <active>true</active>
        <label>CN Outlet Count</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>